tests/build/cases/widget/invalid_path_to_property_in_when1.stderr
error: widget properties only have a single name, try `self.is_pressed`
  --> $DIR/invalid_path_to_property_in_when1.rs:10:19
   |
10 |         when *#zero_ui::properties::states::is_pressed {
   |                   ^^^^^^^
